Fix tests, use ProcessBuilder instead Runtime.exec